welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:24: error: type mismatch;
 found   : Unit
 required: Int
		ado=ado+1
                   ^countTeen:26: error: type mismatch;
 found   : Unit
 required: Int
		ado=ado
                   ^